--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,11 +3,12 @@ services:
     image: ghcr.io/gethomepage/homepage:latest
     container_name: guest_homepage
     ports:
-      - 3100:3000
+      - 3000:3100
     volumes:
       - /home/rjvms/docker/guest-homepage/config:/app/config # Make sure your local config directory exists
       - /var/run/docker.sock:/var/run/docker.sock # (optional) For docker integrations
     environment:
+      PORT: 3100
       HOMEPAGE_ALLOWED_HOSTS: home.rj-web.org,51.91.79.32:3100 # required, may need port. See gethomepage.dev/installation/#homepage_allowed_hosts
 
 
