--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 services:
   homepage:
     image: ghcr.io/gethomepage/homepage:latest
-    container_name: guest_homepage
+    container_name: guest-homepage
     ports:
       - 3000:3100
     volumes:
